--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.10.0",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
